--- a/inc_de/jobs-pleodat-9.1.html
+++ b/inc_de/jobs-pleodat-9.1.html
@@ -86,7 +86,7 @@
 						<li>Grundlegende Prinzipien und Praktiken des agilen Testens</li>
 						<li>Gute Kenntnis von agilen Methoden in der modernen Softwareentwicklung</li>
 						<li>ISTQB Zertifizierung wünschenswert</li>
-						<li>Fließende Deutsch und Englischkenntnisse</li>
+						<li>Fließende Deutsch- und Englischkenntnisse</li>
 					</ul>
 				</div>
 			</div>
