--- a/inc_de/jobs-pleodat-contact.html
+++ b/inc_de/jobs-pleodat-contact.html
@@ -5,7 +5,7 @@
         	&nbsp;<br />
         	&nbsp;<br />
 			<h3>Du möchtest an der Softwareplattform zur schnelleren Schaffung von Wissen mitentwickeln? </h3>
-			<p>Dann freuen wir uns über Deine Bewerbung in einer verschlüsselten eMail an jobs@pleodat.de</p>
+			<p>Dann freuen wir uns über Deine Bewerbung in einer verschlüsselten E-Mail an jobs@pleodat.de</p>
 			<a href="/files/pleodat_jobs_pgp_public_key.asc" download>&#128274; Download unseres PGP-Schlüssels</a>
         	<br />
         	<br />
