--- a/inc_de/jobs-pleodat-values.html
+++ b/inc_de/jobs-pleodat-values.html
@@ -6,14 +6,14 @@
 			<br />
 			<h3><span style="color:#f00">Unsere Werte</span></h3>
 			<div class="col-1-2 service-box" >
-				<h4>Es gibt keine Alternative zu Qualität</h4>
-				<h4>Was wir versprechen, halten wir ein</h4>
-				<h4>Der Kunde ist die wichtigste Person im Haus</h4>
+				<h4>Wir arbeiten eng und effektiv zusammen, um unsere gemeinsamen Ziele zu erreichen.</h4>
+				<h4>Wir handeln ethisch korrekt, halten uns an unsere Versprechen und übernehmen Verantwortung für unsere Handlungen und Auswirkungen auf die Umwelt und die Gemeinschaft.</h4>
+				<h4>Wir setzen uns für die Bedürfnisse und Anforderungen unserer Kunden ein und bieten ihnen ein exzellentes Kundenerlebnis.</h4>
 			</div>
 			<div class="col-1-2 service-box" >
-				<h4>Die Aufgabe steht im Vordergrund, nicht die Person</h4>
-				<h4>Wir setzen auf die Mitwirkung aller Mitarbeiter</h4>
-				<h4>Fehler werden toleriert, aber nicht wiederholt</h4>
+				<h4>Wir streben kontinuierlich nach Verbesserungen und innovativen Lösungen, um unseren Kunden einen Wettbewerbsvorteil zu bieten.</h4>
+				<h4>Wir respektieren und schätzen die Beiträge jedes Mitarbeiters und schaffen eine Kultur der Inklusion und Diversität.</h4>
+				<h4>Wir setzen uns für hohe Qualitätsstandards in allem ein, was wir tun, um sicherzustellen, dass unsere Kunden stets zufrieden sind.</h4>
 			</div>
 		</div>
 	</div>
