--- a/inc_de/footer.html
+++ b/inc_de/footer.html
@@ -7,7 +7,7 @@
                     <div class="textwidget">
                         <p>Pleodat GmbH<br>Ein Tochterunternehmen der <a target="_blank" href="https://www.sprind.org/">SPRIN-D</a></p>
                         <ul>
-                        	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">SPRIND Projektseite</a></li>
+                        	<li><a target="_blank" href="https://www.sprind.org/de/projekte/cortex-datenbank/">SPRIN-D Projektseite</a></li>
                 			<li><a target="_blank" href="https://www.cortex-ag.com">Cortex AG Website</a></li>
                 			<li><a target="_blank" href="https://docs.cortex-ag.com">Dokumentation der Cortex-InformationsPlattform</a></li>
                         </ul>
