--- a/inc_de/goal-box-4.html
+++ b/inc_de/goal-box-4.html
@@ -3,7 +3,7 @@
         <i class="circle-icon"><img src="images/microservice.svg" alt="brain image" width="65" height="65"></i>
     </div>
     <div class="service-entry">
-        <h3>Effizient und flexibel</h3>
+        <h3>Effizient und Flexibel</h3>
         <p>Wir wollen agile Prozesse unterstützen, IT vereinfachen und dabei gleichzeitig den Energieverbrauch reduzieren.</p>
         
     </div>
