--- a/inc_de/gdpr.html
+++ b/inc_de/gdpr.html
@@ -95,7 +95,7 @@
 							Verantwortlich für die Verarbeitung von personenbezogenen Daten auf dieser Webseite ist (vgl. Impressum):
 							<br /><br />
 							Pleodat GmbH<br/>Lagerhofstr. 4<br/>04103 Leipzig<br/><br/>
-							Geschäftsführung: Herr Georg Loepp und Herr Sven Kreigenfeld<br/><br/>
+							Geschäftsführung: Herr Sven Kreigenfeld<br/><br/>
 							E-Mail: datenschutz@pleodat.de
 							</p>
 						</div>
